--- a/project.ipynb
+++ b/project.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
     "\n",
     "# Regression Models\n",
     "\n",
-    "# LinearRegression \n",
+    "\n",
     "\n",
     "linear_regression = {\n",
     "    \"name\": \"LinearRegression\",\n",
@@ -860,6 +860,13 @@
    "metadata": {},
    "source": [
     "YOUR ANSWERS HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For Problem 5, three regression model classes were selected to become familiar with different approaches to predicting continuous outcomes. Linear Regression models the target as a straight line combination of features, providing a simple and interpretable baseline. Ridge Regression extends this by including L2 regularization, which helps prevent overfitting when features are highly correlated or numerous. Random Forest Regressor is an ensemble method that aggregates predictions from multiple decision trees, improving accuracy and capturing complex nonlinear patterns. For each model, links to the official scikit-learn documentation and an external resource, such as Wikipedia, were provided to support research and deepen understanding of how these models work in practice."
    ]
   },
   {
