--- a/project.ipynb
+++ b/project.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,59 +282,59 @@
       "target\n",
       "\n",
       "Column descriptions:\n",
-      "Density: Body density calculated using underwater weighing; used to estimate body fat.\n",
-      "Age: Age of the individual in years.\n",
-      "Weight: Body weight in pounds.\n",
-      "Height: Height in inches.\n",
-      "Neck: Neck circumference in centimeters.\n",
-      "Chest: Chest circumference in centimeters.\n",
-      "Abdomen: Abdomen circumference in centimeters; a key predictor of body fat.\n",
-      "Hip: Hip circumference in centimeters.\n",
-      "Thigh: Thigh circumference in centimeters.\n",
-      "Knee: Knee circumference in centimeters.\n",
-      "Ankle: Ankle circumference in centimeters.\n",
-      "Biceps: Flexed biceps circumference in centimeters.\n",
-      "Forearm: Forearm circumference in centimeters.\n",
-      "Wrist: Wrist circumference in centimeters.\n",
-      "target: Body fat percentage estimated using a model (reference variable).\n"
+      "Density: A quantitative measure of body density reflecting the relationship between fat mass and lean tissue.\n",
+      "Age: The age of the individual expressed in years.\n",
+      "Weight: The total body mass of the individual.\n",
+      "Height: The measured stature of the individual.\n",
+      "Neck: A measurement describing the size of the neck region.\n",
+      "Chest: A measurement describing the size of the chest region of the torso.\n",
+      "Abdomen: A measurement describing the size of the abdominal (waist) region, which is a strong indicator of body fat accumulation.\n",
+      "Hip: A measurement describing the size of the hip region.\n",
+      "Thigh: A measurement describing the size of the upper leg region.\n",
+      "Knee: A measurement describing the size of the knee region.\n",
+      "Ankle: A measurement describing the size of the ankle region.\n",
+      "Biceps: A measurement describing the size of the upper arm in the biceps region.\n",
+      "Forearm: A measurement describing the size of the forearm region.\n",
+      "Wrist: A measurement describing the size of the wrist region.\n",
+      "target: The dependent variable representing the individual’s body fat percentage and serving as the prediction target for regression models.\n"
      ]
     }
    ],
    "source": [
     "# YOUR CODE HERE\n",
     "\n",
-    "# List all columns\n",
+    "# List all columns in the dataset\n",
     "\n",
     "columns = df.columns.tolist()\n",
     "print(\"Columns in the Body Fat dataset:\")\n",
     "for col in columns:\n",
     "    print(col)\n",
     "\n",
-    "# Create a dictionary with short descriptions for each column\n",
+    "# Define professional descriptions for each column\n",
     "\n",
     "column_descriptions = {\n",
-    "    \"Density\": \"Body density calculated using underwater weighing; used to estimate body fat.\",\n",
-    "    \"Age\": \"Age of the individual in years.\",\n",
-    "    \"Weight\": \"Body weight in pounds.\",\n",
-    "    \"Height\": \"Height in inches.\",\n",
-    "    \"Neck\": \"Neck circumference in centimeters.\",\n",
-    "    \"Chest\": \"Chest circumference in centimeters.\",\n",
-    "    \"Abdomen\": \"Abdomen circumference in centimeters; a key predictor of body fat.\",\n",
-    "    \"Hip\": \"Hip circumference in centimeters.\",\n",
-    "    \"Thigh\": \"Thigh circumference in centimeters.\",\n",
-    "    \"Knee\": \"Knee circumference in centimeters.\",\n",
-    "    \"Ankle\": \"Ankle circumference in centimeters.\",\n",
-    "    \"Biceps\": \"Flexed biceps circumference in centimeters.\",\n",
-    "    \"Forearm\": \"Forearm circumference in centimeters.\",\n",
-    "    \"Wrist\": \"Wrist circumference in centimeters.\",\n",
-    "    \"target\": \"Body fat percentage estimated using a model (reference variable).\"\n",
+    "    \"Density\": \"A quantitative measure of body density reflecting the relationship between fat mass and lean tissue.\",\n",
+    "    \"Age\": \"The age of the individual expressed in years.\",\n",
+    "    \"Weight\": \"The total body mass of the individual.\",\n",
+    "    \"Height\": \"The measured stature of the individual.\",\n",
+    "    \"Neck\": \"A measurement describing the size of the neck region.\",\n",
+    "    \"Chest\": \"A measurement describing the size of the chest region of the torso.\",\n",
+    "    \"Abdomen\": \"A measurement describing the size of the abdominal (waist) region, which is a strong indicator of body fat accumulation.\",\n",
+    "    \"Hip\": \"A measurement describing the size of the hip region.\",\n",
+    "    \"Thigh\": \"A measurement describing the size of the upper leg region.\",\n",
+    "    \"Knee\": \"A measurement describing the size of the knee region.\",\n",
+    "    \"Ankle\": \"A measurement describing the size of the ankle region.\",\n",
+    "    \"Biceps\": \"A measurement describing the size of the upper arm in the biceps region.\",\n",
+    "    \"Forearm\": \"A measurement describing the size of the forearm region.\",\n",
+    "    \"Wrist\": \"A measurement describing the size of the wrist region.\",\n",
+    "    \"target\": \"The dependent variable representing the individual’s body fat percentage and serving as the prediction target for regression models.\"\n",
     "}\n",
     "\n",
     "# Print column descriptions\n",
     "\n",
     "print(\"\\nColumn descriptions:\")\n",
     "for col, desc in column_descriptions.items():\n",
-    "    print(f\"{col}: {desc}\")"
+    "    print(f\"{col}: {desc}\")\n"
    ]
   },
   {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
    "source": [
     "YOUR ANSWER HERE\n",
     "\n",
-    "* For Problem 10, the best model I selected is the Random Forest Regressor from Problem 6. The primary criterion for selecting this model was the L2 loss (mean squared error), which measures the average squared difference between the predicted and actual target values. On the Body Fat dataset, Random Forest achieved a significantly lower L2 loss (0.0507) compared to Linear Regression (0.3803) and Ridge Regression (0.4305) when trained on the full dataset. While Ridge and Lasso models were affected by standardization in Problem 8, Random Forest’s performance remained superior because tree-based models are not sensitive to feature scaling and can capture non-linear relationships in the data. Cross-validation results from Problem 7 further support this choice, as linear models showed larger differences between training and cross-validated L2 losses, indicating some overfitting. Overall, Random Forest provides the most accurate and robust predictions for estimating body fat percentage in this dataset, making it the best choice among all models tested."
+    "* For Problem 10, the best model I selected is the Random Forest Regressor from Problem 6. The primary criterion for selecting this model was the L2 loss (mean squared error), which measures the average squared difference between the predicted and actual target values. On the Body Fat dataset, Random Forest achieved a significantly lower L2 loss (0.0507) compared to Linear Regression (0.3803) and Ridge Regression (0.4305) when trained on the full dataset. While Ridge and Lasso models were affected by standardization in Problem 8, Random Forest’s performance remained superior because tree-based models are not sensitive to feature scaling and can capture non linear relationships in the data. Cross validation results from Problem 7 further support this choice, as linear models showed larger differences between training and cross-validated L2 losses, indicating some overfitting. Overall, Random Forest provides the most accurate and robust predictions for estimating body fat percentage in this dataset, making it the best choice among all models tested."
    ]
   }
  ],
